--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -13,6 +13,7 @@
     "access": "public"
   },
   "devDependencies": {
+    "tsconfig": "workspace:*",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0"
   }
