--- a/packages/nui/package.json
+++ b/packages/nui/package.json
@@ -17,10 +17,13 @@
   },
   "peerDependencies": {
     "next": "latest",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^18.11.17",
     "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
     "eslint": "^7.32.0",
     "eslint-config-custom": "workspace:*",
     "postcss": "^8.4.20",
