--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^1.2.1",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ui": "workspace:*",
-    "nui": "workspace:*"
+    "ui": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^18.11.17",
