--- a/apps/editor/package.json
+++ b/apps/editor/package.json
@@ -16,7 +16,9 @@
     "@editorjs/paragraph": "^2.9.0",
     "@editorjs/quote": "^2.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "ui": "workspace:*",
+    "editor-plugin": "workspace:*"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
