--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ui": "workspace:*",
+    "editor-plugin": "workspace:*",
     "zod": "^3.20.6"
   },
   "devDependencies": {
