--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "clsx": "^1.2.1",
+    "editor-plugin": "workspace:*",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ui": "workspace:*",
-    "editor-plugin": "workspace:*",
     "zod": "^3.20.6"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^18.11.17",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
