--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "pnpm with-env next dev",
-    "build": "next build",
+    "build": "pnpm with-env next build",
     "start": "next start",
     "lint": "next lint",
     "with-env": "dotenv -e ../../.env --"
